Fix für z-index für Sticky Elements vs. Hero vs. Header

--- a/Resources/Public/Sass/xna/_layout-inline.scss
+++ b/Resources/Public/Sass/xna/_layout-inline.scss
@@ -15,7 +15,7 @@ body {
 #header {
 	position: absolute;
 	top: 0;	left: 0;
-	z-index: 10;
+	z-index: 100;
 	width: 100%;
 }
 
