--- a/Resources/Public/Sass/xna/components/layout/_sticky.scss
+++ b/Resources/Public/Sass/xna/components/layout/_sticky.scss
@@ -2,6 +2,7 @@
 	.sticky--container {
 		position: fixed;
 		top: 171px; right: 0;
+		z-index: 50;
 		display: none;
 	}
 
