--- a/Resources/Public/Sass/xna/modules/_hero.scss
+++ b/Resources/Public/Sass/xna/modules/_hero.scss
@@ -60,6 +60,7 @@
 		&.ce-frame--variant-2 {
 			& {
 				padding-right: 1.5rem;
+				z-index: 55;
 			}
 
 			.ce-frame--inner {
